Prevent modal from going off-screen
Fixes issue #13

--- a/photography-gallery/wwwroot/css/site.css
+++ b/photography-gallery/wwwroot/css/site.css
@@ -129,9 +129,7 @@ a {
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
-    max-width: 90%;
-    max-height: 100%;
-    width: 820px;
+    max-height: 100vh;
 }
 .modal-body {
     position:relative;
@@ -139,7 +137,8 @@ a {
 }
 
 .modal-body img {
-    width: 100%;
+    max-height: 90vh;
+    max-width: 90vw;
 }
 
 #imagePreviewModalCloseBtn {
@@ -193,8 +192,8 @@ a {
         margin: 0;
     }
 
-    .modal-content {
-        max-width: 100%;
+    .modal-body img {
+        max-width: 95vw;
     }
 
     #imagePreviewModalCloseBtn {
